# anymal_c_simple_description

./: CMakeLists.txt  README.md  package.xml
config/: anymal_controller_effort.yaml
config/rviz/: standalone.rviz
urdf/: anymal.urdf  anymal.xacro  anymal_control.xacro  anymal_gazebo.xacro
